# django-react-project

./: .bandit  .flake8  .gitignore  ANALYSIS_SUMMARY.md  ARCHITECTURAL_DEBT.md  COMPARISON_MATRIX.md  COMPREHENSIVE_ARCHITECTURE_ANALYSIS.md  CONSOLIDATION_SUMMARY.md  DATABASE_RELATIONAL_MAP_HSBC.md  DATA_NORMALIZATION_AUDIT_REPORT.md  DOCUMENTATION_INDEX.md  ENTERPRISE_IMPLEMENTATION_GUIDE.md  PACKAGE_ANALYSIS.md  PROJECT_STATUS.md  QUERY_OPTIMIZATION_STRATEGY.md  README.md  STRATEGIC_UI_REBUILD_STATUS.md  TDD_FRAMEWORK_ANALYSIS.py  TECHNICAL_DOCUMENTATION.md  USER_DOCUMENTATION.md  VERIFICATION_REPORT.md  WORLD_CLASS_AVIATION_SYSTEM_PLAN.md  create_dynamic_rules.py  django-gunicorn.service  gunicorn.conf.py  nginx.conf  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: django.yml
accounts/: auth_views.py  enterprise_forms.py  forms.py  middleware.py  modern_forms.py  modern_views.py  profile_forms.py  profile_views.py  urls.py  views.py
aviation/: __init__.py  admin.py  apps.py  models.py
aviation/migrations/: 0001_initial.py  0002_fix_airspace_boundary_field.py
backend/: settings.py  urls.py  views.py
core/: admin.py  compliance_engine.py  compliance_urls.py  compliance_utils.py  compliance_views.py  models.py  utils.py
core/migrations/: 0001_initial.py  0002_add_country_fields.py  0003_add_state_fields.py  0004_add_city_fields.py  0005_add_postal_code_manual.py  0006_three_color_compliance_system.py  0007_revolutionary_compliance_system.py  0008_add_compliance_status_model.py  0009_fix_compliance_status_description.py  0010_alter_compliancerule_check_frequency_hours.py
core/services/: compliance_query_service.py
core/templatetags/: compliance_tags.py
docs_archive/: ANALYSIS_SUMMARY.md  CASA_DIGITIZATION_PLAN.md  CASR_PART101_INTEGRATION.md  DATABASE_RELATIONAL_MAP.md  PACKAGE_ANALYSIS.md  TDD_IMPLEMENTATION_GUIDE.md  TDD_SUCCESS_STORY.md
flight_operations/: apps.py  models.py  tests.py
flight_operations/migrations/: 0001_initial.py  0002_alter_flightoperation_launch_location_city_and_more.py  0003_alter_flightoperation_status.py  0004_flightoperation_launch_location_and_more.py  0005_alter_flightoperation_proposed_date_time.py  0006_alter_flightoperation_launch_location_lat_and_more.py  0007_alter_flightoperation_preliminary_assessor.py  0008_flightoperation_launch_location_coordinates_and_more.py
rpas/: apps.py  models.py
rpas/migrations/: 0001_initial.py  0002_rpasaircraft_rpasoperator_remove_flightlog_aircraft_and_more.py  0003_add_geographical_address_fields.py  0004_finalize_address_fields_requirements.py  0005_casa_table_1_compliance_step1.py  0006_add_operational_hq_email.py  0007_alter_keypersonnel_unique_together_and_more.py  0008_alter_rpasaircraft_options_and_more.py  0009_alter_rpastechnicallogparta_log_entry_number.py  0010_alter_f2part101moscertification_issued_on.py
sms/: admin.py  models.py
sms/migrations/: 0001_initial.py  0002_jobsafetyanalysis_jsajobstep_jsahazard.py  0003_incidentcategory_incident_correctiveaction.py
static/css/: main.css
static/js/: main.js
templates/: base.html  tailwind_test.html
templates/accounts/: dashboard.html  landing.html  login.html  minimal_profile_form.html  modern_profile_edit.html  modern_profile_form.html  profile_edit.html  profile_edit.html.backup  profile_view.html  register.html
(+34 files in other folders)
